# MatrixOS

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Cargo.toml  Makefile  Plan.md  TODO.md  build.sh  build.zig  build.zig.zon  build_image.sh  grub.cfg  main.cpp  run.sh  runner.cpp
.cargo/: config.toml
MatrixBootloader/: CMakeLists.txt  CMakePresets.json
MatrixBootloader/src/: main.cpp
MatrixBootloader/src/gnu-efi/: data.c
MatrixBootloader/src/matrix_efi/: MatrixEfiTable.ixx
MatrixKernel/: CMakeLists.txt
MatrixKernel/src/: main.cpp
StandardMatrix/: CMakeLists.txt
StandardMatrix/src/: standard_test.ixx
StandardMatrix/src/storage/: custom_new.ixx  optional.ixx  optional_tests.cpp  variant.ixx  variant_tests.cpp
StandardMatrix/src/types/: semantics.ixx  type_traits.ixx
bootloader/: Makefile  main.cpp
kernel/: CMakeLists.txt  grub.cfg  main.cpp  run.sh
kernel/src/: kernel.cpp  kernel.h  multiboot_header.h  multiboot_header.hpp  start.cpp
libmatrix/: CMakeLists.txt
libmatrix/src/: string.cpp  string.h
matrix_boot_args/: Cargo.toml
matrix_boot_args/src/: frame_buffer.rs  lib.rs  memory_map.rs  relocatable.rs
matrix_boot_common/: Cargo.toml
matrix_boot_common/src/: kernel_jumper.rs  lib.rs  relocatable.rs  stack.rs
matrix_boot_common/src/boot_info/: frame_buffer.rs  memory_map.rs  mod.rs
matrix_boot_common/src/memory/: mappings.rs
matrix_boot_info/: CMakeLists.txt
matrix_boot_info/src/: boot_info.cpp  boot_info.hpp
matrix_boot_info/src/graphics/: frame_buffer.cpp  frame_buffer.hpp
matrix_bootloader/: Cargo.toml
matrix_bootloader/src/: args.rs  kernel_loader.rs  kernel_stack.rs  main.rs  protocols.rs
matrix_bootloader/src/args/: mod.rs
matrix_bootloader/src/elf_loader/: loader.rs
matrix_bootloader/src/elf_loader/elf/: enum_values.rs  header_raw.rs  mod.rs  program_header_raw.rs  section_header_raw.rs
matrix_bootloader/src/loader/: elf.rs  loader.rs  mod.rs  parser.rs  read_file.rs
matrix_bootloader/src/loader/elf/: header_raw.rs  program_header_raw.rs  section_header_raw.rs
matrix_bootloader/src/memory/: mappings.rs  mod.rs
matrix_bootloader_builder/: Cargo.toml  build.rs  config.json
matrix_bootloader_builder/src/: lib.rs
matrix_common/: Cargo.toml
matrix_common/src/: kernel_jumper.rs  lib.rs  panic.rs  stack.rs
matrix_common/src/boot_info/: mod.rs
matrix_common/src/logger/: mod.rs  qemu_logger.rs
matrix_common/src/memory/: mappings.rs  mod.rs
matrix_efi/: CMakeLists.txt
matrix_efi/src/: mefi_start.cpp  mefi_start.hpp  mio.cpp  mio.hpp
matrix_efi_bootloader/: CMakeLists.txt  linker.ld  startup.nsh  subsystem_patch.py
matrix_efi_bootloader/gnu-efi-src/: data.c
matrix_efi_bootloader/src/: boot_services.cpp  boot_services.hpp  efi_error.hpp  elf_loader.cpp  elf_loader.hpp  elf_magics.hpp  mefi_start.cpp  mio.cpp  start.cpp  start.hpp  system_table.cpp  system_table.hpp  unique_handle.hpp
matrix_efi_bootloader/src/protocols/: graphics_protocol.cpp  graphics_protocol.hpp  protocol.hpp  simple_file_system_file.cpp  simple_file_system_file.hpp  simple_file_system_protocol.cpp  simple_file_system_protocol.hpp  simple_output_protocol.cpp  simple_output_protocol.hpp
matrix_images/: Cargo.toml
matrix_images/src/: image.rs
matrix_kernel/: CMakeLists.txt  Cargo.toml  linker.ld
matrix_kernel/.cargo/: config.toml
matrix_kernel/src/: entry_point.rs  main.rs  memory_locations.rs  multiboot_header.hpp  start.cpp
matrix_kernel/src/arch/x64/: gdt.rs  interrupts.rs  mod.rs
matrix_kernel/src/logger/: mod.rs
matrix_kernel/src/memory/: allocator.rs  apic_mapping.rs  frame_allocator.rs  locked_allocator.rs  memory_locations.rs  memory_map_frame_allocator.rs  mod.rs  once_objects.rs  paging.rs  silly_memory_map_frame_allocator.rs  simple_allocator.rs
matrix_kernel/src/panics/: mod.rs
matrix_kernel/src/processes/: mod.rs  process.rs  process_memory_manager.rs
matrix_kernel/src/scheduler/: mod.rs  process.rs  process_memory_manager.rs  process_page_table.rs  trapframe.rs
matrix_kernel/src/scheduling/: mod.rs  process.rs  trapframe.rs
matrix_kernel_builder/: Cargo.toml  build.rs
matrix_kernel_builder/src/: lib.rs
matrix_loader/: Cargo.toml
matrix_loader/src/: main.rs
os dev vault/.obsidian/: workspace.json
os dev vault/UEFI Bootloader/: What is a UEFI boot loader?.md  What is a bootloader?.md
research/.obsidian/: workspace.json
research/bootloaders/: memory.md  memory.typ
research/processes/: Creation of a Process.md
src/: build.rs  kernel.zig  linker.ld  main.rs  main.zig  start.zig
src/interrupts/: gdt.zig  interrupts.zig
standard_matrix/: CMakeLists.txt
standard_matrix/src/: int_types.hpp  match.hpp  math.hpp  mem_utils.cpp  mem_utils.hpp  move.hpp  optional.cpp  optional.hpp  optional_tests.cpp  pair.hpp  ref.hpp  result.hpp  tests.cpp  tuple.hpp  type_traits.hpp  types.hpp  variant.cpp  variant.hpp  variant_iterator.hpp  variant_tests.cpp
standard_matrix/src/type_traits/: constructible_from.hpp  enable_if.hpp  find_type_index.hpp  is_same.hpp  is_type_in_group.hpp  is_unique_tuple.hpp  remove_reference.hpp  remove_refrence.hpp  same.hpp  smaller_than.hpp  tests.cpp  type_index.hpp
xtask/: Cargo.toml
xtask/src/: bootloader.rs  builder.rs  clean.rs  clippy.rs  elf_loader.rs  image.rs  kernel.rs  main.rs  project.rs  qemu.rs  runner.rs
