[package]
name = "matrix_bootloader"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.29"
uefi = { version = "0.36.1", features = ["panic_handler", "logger", "global_allocator"] }
matrix_boot_args = { path = "../matrix_boot_args" }
anyhow = { version = "1.0.100", default-features = false }
