[package]
name = "matrix_kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
lazy_static = {version = "1.5.0", default-features = false, features = ["spin_no_std"]}
log = { version = "0.4.29", default-features = false }
matrix_boot_args = { path = "../matrix_boot_args" }
x86_64 = { version = "0.15.4", default-features = false, features = ["instructions"]}
