[package]
name = "matrix_kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.102", default-features = false }
bytemuck = { version = "1.25.0", features = ["derive"] }
lazy_static = {version = "1.5.0", default-features = false, features = ["spin_no_std"]}
linked_list_allocator = "0.10.5"
log = { version = "0.4.29", default-features = false }
matrix_boot_common = { path = "../matrix_boot_common" }
pic8259 = "0.11.0"
spin = "0.10.0"
x86_64 = { version = "0.15.4" }
bitflags = "2.10.0"
